--- a/css/loginstyle.css
+++ b/css/loginstyle.css
@@ -13,146 +13,110 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    min-height: 100vh;}
+    min-height: 100vh;
+    background: #fff;
+    color: #fff;
+    font-family: Arial;
+    font-size: 12px;
+}
+
+.body {
+    position: absolute;
+    top: -20px;
+    left: -20px;
+    right: -40px;
+    bottom: -40px;
+    width: auto;
+    height: auto;
+    background-image: url(../Imagenes/loginfondo.jpg);
+    background-size: cover;
+    -webkit-filter: blur(3px);
+    z-index: 0;
+}
+
+.grad {
+    position: absolute;
+    top: -20px;
+    left: -20px;
+    right: -40px;
+    bottom: -40px;
+    width: auto;
+    height: auto;
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(0,0,0,0)), color-stop(100%,rgba(0,0,0,0.65)));
+    z-index: 1;
+    opacity: 0.7;
+}
+.titulo{
+    text-align: center;
+    font-size: 150%;
     
-    @import url(https://fonts.googleapis.com/css?family=Exo:100,200,400);
-    @import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro:700,400,300);
-    @import url(https://fonts.googleapis.com/css2?family=Nunito+Sans:opsz@6..12&display=swap);
-    
-    body{
-        margin: 0;
-        padding: 0;
-        background: #fff;
-    
-        color: #fff;
-        font-family: Arial;
-        font-size: 12px;
-    }
-    
-    .body{
-        position: absolute;
-        top: -20px;
-        left: -20px;
-        right: -40px;
-        bottom: -40px;
-        width: auto;
-        height: auto;
-        background-image: url(../Imagenes/loginfondo.jpg);
-        background-size: cover;
-        -webkit-filter: blur(2px);
-        z-index: 0;
-    }
-    
-    .grad{
-        position: absolute;
-        top: -20px;
-        left: -20px;
-        right: -40px;
-        bottom: -40px;
-        width: auto;
-        height: auto;
-        background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(0,0,0,0)), color-stop(100%,rgba(0,0,0,0.65))); /* Chrome,Safari4+ */
-        z-index: 1;
-        opacity: 0.7;
-    }
-    
-    .header{
-        position: absolute;
-        top: calc(50% - 35px);
-        left: calc(50% - 255px);
-        z-index: 2;
-    }
-    
-    .header div{
-        float: left;
-        color: white;
-        font-family: 'Nunito Sans', sans-serif;
-        font-size: 35px;
-        font-weight: 200;
-    }
-    
-    .header div span{
-        color: white !important;
-    }
-    
-    .login{
-        position: absolute;
-        top: calc(50% - 75px);
-        left: calc(50% - 50px);
-        height: 150px;
-        width: 350px;
-        padding: 10px;
-        z-index: 2;
-    }
-    
-    .login input[type=text]{
-        width: 250px;
-        height: 30px;
-        background: transparent;
-        border: 1px solid rgba(255,255,255,0.6);
-        border-radius: 2px;
-        color: #fff;
-        font-family: 'Exo', sans-serif;
-        font-size: 16px;
-        font-weight: 400;
-        padding: 4px;
-    }
-    
-    .login input[type=password]{
-        width: 250px;
-        height: 30px;
-        background: transparent;
-        border: 1px solid rgba(255,255,255,0.6);
-        border-radius: 2px;
-        color: #fff;
-        font-family: 'Exo', sans-serif;
-        font-size: 16px;
-        font-weight: 400;
-        padding: 4px;
-        margin-top: 10px;
-    }
-    
-    .login input[type=button]{
-        width: 260px;
-        height: 35px;
-        background: #fff;
-        border: 1px solid #fff;
-        cursor: pointer;
-        border-radius: 2px;
-        color: #a18d6c;
-        font-family: 'Exo', sans-serif;
-        font-size: 16px;
-        font-weight: 400;
-        padding: 6px;
-        margin-top: 10px;
-    }
-    
-    .login input[type=button]:hover{
-        opacity: 0.2;
-    }
-    
-    .login input[type=button]:active{
-        opacity: 0.5;
-    }
-    
-    .login input[type=text]:focus{
-        outline: none;
-        border: 1px solid rgba(255,255,255,0.9);
-    }
-    
-    .login input[type=password]:focus{
-        outline: none;
-        border: 1px solid rgba(255,255,255,0.9);
-    }
-    
-    .login input[type=button]:focus{
-        outline: none;
-    }
-    
-    ::-webkit-input-placeholder{
-       color: rgba(255,255,255,0.6);
-    }
-    
-    ::-moz-input-placeholder{
-       color: rgba(255,255,255,0.6);
-    }
+}
+
+
+
+.login {
+    position: absolute;
+    top: calc(50% - 75px);
+    left: calc(50% - 175px);
+    height: 220px;
+    width: 350px;
+    padding: 10px;
+    padding-right: 15px;
+    z-index: 2;
+    background: rgba(255, 255, 255, 0.1);
+    border-radius: 10px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.login input[type=text],
+.login input[type=password] {
+    width: 100%;
+    height: 30px;
+    background: transparent;
+    border: 1px solid #ffa500;
+    border-radius: 2px;
+    color: white;
+    font-family: 'Exo', sans-serif;
+    font-size: 16px;
+    font-weight: 400;
+    padding: 4px;
+    margin-top: 10px;
+}
+
+.login input[type=button] {
+    width: 100%;
+    height: 35px;
+    background: #ffa500;
+    border: 1px solid #ffa500;
+    cursor: pointer;
+    border-radius: 2px;
+    color: white;
+    font-family: 'Exo', sans-serif;
+    font-size: 16px;
+    font-weight: 400;
+    padding: 6px;
+    margin-top: 15px;
+}
+
+.login input[type=button]:hover {
+    opacity: 0.2;
+}
+
+.login input[type=button]:active {
+    opacity: 0.5;
+}
+
+.login input[type=text]:focus,
+.login input[type=password]:focus,
+.login input[type=button]:focus {
+    outline: none;
+    border: 1px solid rgba(255,255,255,0.9);
+}
+
+::-webkit-input-placeholder {
+    color: white;
+}
+
+::-moz-input-placeholder {
+    color: rgba(255,255,255,0.6);
+}
