--- a/css/crudstyle.css
+++ b/css/crudstyle.css
@@ -5,3 +5,88 @@
 /*                Lengaje de marcas                   */
 /******************************************************/
 
+body {
+    background-image: url(../Imagenes/fondocrud.jpg);
+    background-size: cover;
+    background-color: white;
+}
+
+#container {
+    background: rgba(255, 255, 255, 0.2);
+    backdrop-filter: blur(5px);
+    border-radius: 10px;
+    padding: 20px;
+    color: white;
+    width: 80%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: auto;
+    height: 100vh;
+    font-family: sans-serif;
+    overflow: hidden; 
+}
+
+table {
+    border-collapse: collapse;
+    width: 100%;
+    border-radius: 10px;
+    overflow: hidden;
+}
+
+th, td {
+    padding: 15px;
+    text-align: left;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.5);
+}
+
+caption {
+    font-size: 2em;
+    margin-bottom: 20px;
+}
+
+tr:hover {
+    background-color: #ffa500;
+}
+
+tr:first-child {
+    background-color: black;
+    color: white;
+}
+
+
+.btn {
+    border: none;
+    color: white;
+    padding: 10px;
+    margin-right: 2px;
+    border-radius: 5px;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+.success {background-color: #04AA6D;} 
+.success:hover {background-color: #46a049;}
+
+.info {background-color: #2196F3;} 
+.info:hover {background: #0b7dda;}
+
+.warning {background-color: #ff9800;} 
+.warning:hover {background: #e68a00;}
+
+.danger {background-color: #f44336;} 
+.danger:hover {background: #da190b;}
+
+.default {background-color: #e7e7e7; color: black;} 
+.default:hover {background: #ddd;}
+
+
+@media only screen and (max-width: 768px) {
+    table {
+        font-size: 14px;
+    }
+
+    th, td {
+        padding: 10px;
+    }
+}
