--- a/css/loginstyle.css
+++ b/css/loginstyle.css
@@ -46,20 +46,19 @@ body {
     z-index: 1;
     opacity: 0.7;
 }
-.titulo{
+
+.titulo {
     text-align: center;
     font-size: 150%;
-    
 }
-
-
-
+/*LOGIN*/
 .login {
     position: absolute;
-    top: calc(50% - 75px);
-    left: calc(50% - 175px);
-    height: 220px;
-    width: 350px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    max-width: 350px;
+    width: 80%;
     padding: 10px;
     padding-right: 15px;
     z-index: 2;
@@ -110,7 +109,7 @@ body {
 .login input[type=password]:focus,
 .login input[type=button]:focus {
     outline: none;
-    border: 1px solid rgba(255,255,255,0.9);
+    border: 1px solid rgba(255, 255, 255, 0.9);
 }
 
 ::-webkit-input-placeholder {
@@ -118,5 +117,12 @@ body {
 }
 
 ::-moz-input-placeholder {
-    color: rgba(255,255,255,0.6);
+    color: rgba(255, 255, 255, 0.6);
+}
+
+/*RESPONSIVE*/
+@media only screen and (max-width: 600px) {
+    .login {
+        width: 90%;
+    }
 }
