--- a/css/loginstyle.css
+++ b/css/loginstyle.css
@@ -120,6 +120,12 @@ body {
     color: rgba(255, 255, 255, 0.6);
 }
 
+/*JS*/
+.error {
+    color: black !important;
+}
+
+
 /*RESPONSIVE*/
 @media only screen and (max-width: 600px) {
     .login {
